@@ -12,12 +12,12 @@ LIBRARY_VERSION = 3:0:0
 #          +- Increment if interfaces have been added, removed or changed
 
 INCLUDES = -I$(top_srcdir)/src/openvrml
-AM_CXXFLAGS = $(GLUT_CFLAGS)
+AM_CXXFLAGS = @GL_CFLAGS@
 
 if WITH_GL
 lib_LTLIBRARIES = libopenvrml-gl.la
 libopenvrml_gl_la_SOURCES = ViewerOpenGL.cpp OpenGLEvent.cpp
-libopenvrml_gl_la_LDFLAGS = -version-info $(LIBRARY_VERSION) $(GLUT_LIBS)
+libopenvrml_gl_la_LDFLAGS = -version-info $(LIBRARY_VERSION) @GL_LIBS@
 
 OpenVRMLGLincludedir = $(includedir)/OpenVRML/GL
 OpenVRMLGLinclude_HEADERS = common.h OpenGLEvent.h ViewerOpenGL.h
